--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -873,4 +873,18 @@
     <string name="ke424c">گهٽ توجهه ڏي ٿو</string>
     <string name="ke424d">تقريبن ساڳيو آهي</string>
 
+
+    <string name="bdheading"> نون ڄاول ٻارن جي مرڻ جي باري ۾ معلومات   </string>
+    <string name="bdheadingsub"> گزريل هڪ سال ۾ توهان جي گھر ۾ ڪيترا ٻار پيدا ٿيا آهن يا هڪ سال کان گھٽ ڪيترا ٻار فوت ٿيا آهن </string>
+    <string name="bda"> Indicators </string>
+    <string name="bdb"> Statistics None = 0 </string>
+    <string name="bdba"> Number </string>
+    <string name="bdc"> تاریخ پیدائش </string>
+    <string name="bdd"> تاریخ وفات </string>
+    <string name="bd03"> زندہ پیدائش </string>
+    <string name="bd04"> پيدائش کان 7 ڏينهن تائين </string>
+    <string name="bd05"> 8 ڏينهن کان 28 ڏينهن تائين </string>
+    <string name="bd06">  29 ڏينهن کان هڪ سال تائين  </string>
+
+
 </resources>
