--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,10 +59,13 @@
     <string name="cra01">ڇا جواب ڏيندڙ تحقيق ۾ حصو وٺڻ لاءِ تيار آهي</string>
     <string name="crvillage">ڳوٺ/ ايريا جو نالو</string>
     <string name="cruc">يونين ڪائونسل جو نالو</string>
+    <string name="cra02">تعلقه جو ڪوڊ</string>
     <string name="cra03"> توليدي عمر واري عورت جو نمبر </string>
     <string name="cra0301"> Arm </string>
     <string name="cra0302"> Child </string>
-    <string name="cra25"> گهر جو نمبر </string>
+    <string name="cra04"> گهر جو نمبر</string>
+    <string name="cra05">توليدي عمر واري عورت جو نالو</string>
+    <string name="cra06">توليدي عمر واري عورت جي عمر( 15-49 سالن تائين)</string>
 
     <!--      CBT Vars       !-->
 
