--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -359,7 +359,7 @@
     <string name="kc102b"> مري ويو </string>
     <string name="kc103"> ٻار جي عمر وفات وقت ڪيتري هئي؟ </string>
     <string name="kc103m"> عمر مهينن ۾ </string>
-    <string name="kc103y"> عمر سالن ۾ </string>
+    <string name="kc103y"> عمر  ڏينهن  ۾ </string>
     <string name="kc104"> وفات جو سبب ڪهڙو هيو؟ </string>
     <string name="kc104a"> انفيڪشن/جراثيم جو رت ۾ هجڻ </string>
     <string name="kc104b"> پيدائشي نقص </string>
