form Contract Edited and activity d1 layout, formvalidation, save draft and update db

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -609,53 +609,29 @@
     <string name="kc504a"> APPLIED TILL ________ DAYS</string>
     <string name="kc504b"> CONTINUE TILL DATE </string>
 
-    <string name="keheading1"> هڪ سال کان گھٽ ٻارن ۾ کير پيارڻ جو عمل </string>
-    <string name="ke001"> توهان جي آخري ٻار جي عمر ڇا آهي؟ </string>
+    <string name="kdheading1"> هڪ سال کان گھٽ ٻارن ۾ کير پيارڻ جو عمل </string>
+    <string name="kd001"> توهان جي آخري ٻار جي عمر ڇا آهي؟ </string>
     <string name="kd1heading"> کير پيارڻ جي شروعات </string>
-    <string name="kd101"> ڇا ڪڏهن توهان پنهنجي ٻار کي پنهنجي ٿڃ پياري؟ </string>
-    <string name="kd102"> ٻار جي ڄمڻ کان هڪدم پوءِ توهان ٻار کي ڇا ڏنو؟ </string>
-    <string name="kd102a"> ٿڃ </string>
-    <string name="kd102b"> گھٽي </string>
-    <string name="kd102c"> ماکي </string>
-    <string name="kd102d"> گرائپ واٽر </string>
-    <string name="kd102e"> ٻڪري جو کير </string>
-    <string name="kd103"> ڇا توهان پنهنجي ٻار کي پنهنجو پهريون گھاٽو کير پياريو </string>
-    <string name="kd104"> جيڪڏهن نه ته ان جي ڪهڙي وجه هئي؟ </string>
-    <string name="kd104a"> خراب کير </string>
-    <string name="kd104b"> ٻار جي بيمار ٿيڻ جو خطرو </string>
-    <string name="kd104c"> گھاٽو آهي </string>
-    <string name="kd104d"> کر </string>
-    <string name="kd105"> توهان پنهنجي ٻار کي پهريون ڀيرو ڪڏهن کير ڏنو؟ </string>
-    <string name="kd105a"> ڄمڻ کان هڪدم پوءِ </string>
-    <string name="kd105b"> ڄمڻ کان هڪ ڪلاڪ </string>
-    <string name="kd105c"> ڄمڻ کان 6 ڪلاڪن کان پوءِ </string>
-    <string name="kd105d"> 6 ڪلاڪن کان مٿي پر 24 ڪلاڪن کان گھٽ </string>
-    <string name="kd105e"> 24 ڪلاڪ يا ان کان مٿي </string>
-    <string name="kd106"> جيڪڏهن 24 ڪلاڪن يا ان کان وڌيڪ ٽائيم کان پوءِ کير پياريو ته ان جي ڪهڙي وجه هئي؟ </string>
-    <string name="kd106a"> سائز ۾ ننڍو هو/ ٻار ڪمزور هو </string>
-    <string name="kd106b"> ٻار کير پيئڻ جي قابل نه هو </string>
-    <string name="kd106c"> مونکي ان وقت کير نه آيو هو </string>
-    <string name="kd106d"> بيمار هئيس/آئون ان وقت ڪمزور </string>
-    <string name="kd106e"> منهنجي سس ان وقت اجازت نه ڏني هئي </string>
-    <string name="kd107"> روزانو ڪيترا ڀيرا توهان ٻار کي ٿڄ پياريندا آهيو؟ </string>
-    <string name="kd107a"> نمبر </string>
-    <string name="kd107b"> ON DEMAND </string>
-    <string name="kd108"> ڇا توهان جو ٻار اڃا تائين ٿڄ پئي ٿو؟ </string>
-    <string name="kd109"> ڇا توهان ٻار کي پنهنجي ٿڄ ڇاتيءَ سان پياريندا آهيو يا ڪڍي چمچي يا بوتل ۾ پياريندا آهيو؟ </string>
-    <string name="kd109a"> ڇاتيءَ سان </string>
-    <string name="kd109b"> ڪپ ۽ چمچي سان </string>
-    <string name="kd109c"> بوتل سان </string>
-    <string name="kd109d"> beaker </string>
-    <string name="kd110">
+    <string name="kd102"> روزانو ڪيترا ڀيرا توهان ٻار کي ٿڄ پياريندا آهيو؟ </string>
+    <string name="number"> نمبر </string>
+    <string name="kd102b"> ON DEMAND </string>
+    <string name="kd101"> ڇا توهان جو ٻار اڃا تائين ٿڄ پئي ٿو؟ </string>
+    <string name="kd103"> ڇا توهان ٻار کي پنهنجي ٿڄ ڇاتيءَ سان پياريندا آهيو يا ڪڍي چمچي يا بوتل ۾ پياريندا آهيو؟ </string>
+    <string name="kd103a"> ڇاتيءَ سان </string>
+    <string name="kd103b"> ڪپ ۽ چمچي سان </string>
+    <string name="kd103c"> بوتل سان </string>
+    <string name="kd103d"> beaker </string>
+    <string name="kd104">
     جيڪڏهن ٻيو طريقو اختيار ڪندا آهيو ته ڇو ڪندا آهيو؟ </string>
-    <string name="kd110a"> ٻار گھٽ وزن جو هيو </string>
-    <string name="kd110b"> ٻار ننڍو هيو </string>
-    <string name="kd110c"> ٻار بيمار هيو </string>
-    <string name="kd110d"> ٻار ٿڃ وٺڻ جي قابل نه هيو </string>
-    <string name="kd110e"> ٻار آڪسيجن تي هو </string>
-    <string name="kd110f"> ڊاڪٽر اجازت نه ڏني </string>
-    <string name="kd110g"> آئو بيمار هئيس </string>
-    <string name="kd110h"> چپ وڍيل تارون ڪٽيل </string>
+    <string name="kd104a"> ٻار گھٽ وزن جو هيو </string>
+    <string name="kd104b"> ٻار ننڍو هيو </string>
+    <string name="kd104c"> ٻار بيمار هيو </string>
+    <string name="kd104d"> ٻار ٿڃ وٺڻ جي قابل نه هيو </string>
+    <string name="kd104e"> ٻار آڪسيجن تي هو </string>
+    <string name="kd104f"> ڊاڪٽر اجازت نه ڏني </string>
+    <string name="kd104g"> آئو بيمار هئيس </string>
+    <string name="kd104h"> چپ وڍيل تارون ڪٽيل </string>
+
     <string name="kd2heading"> صرف ماءَ جو کير </string>
     <string name="kd201"> ڪيترا مهينا توهان پنهنجي ٻار کي صرف پنهنجي ٿڄ پياري؟ صرف ٿڄ معنيٰ پنهنجو کير (دوائون سميت) </string>
     <string name="kd201a"> ڏينهن </string>
