--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -571,7 +571,7 @@
     <string name="kc612g"> ٻار جو لوڏڻ سان چرپچ ڪرڻ يا بلڪل به نه هلڻ </string>
     <string name="kc612h"> ساڻو ٿي وڃڻ </string>
     <string name="kd"> Module D: LOW BIRTH WEIGHT BABY </string>
-    <string name="kc4heading"> Section C4: Prolong Skin to Skin Contact/ Kangaroo Mother Care </string>
+    <string name="kc4heading"> ڊگھي عرصي لاءِ ٻار کي ماءُ جي ڇاتي سان لڳائڻ </string>
     <string name="kc401"> ڪمزور يا گھٽ وزن واري ٻار کي ڪيئين گرم رکندا آهيو؟ </string>
     <string name="kc401a"> ڪپھ يا ڪمبل ۾ ويهريندا آهيو </string>
     <string name="kc401b"> ٻار کي پنهنجي ويجھو رکندا آهيو </string>
